--- a/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
+++ b/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
@@ -54,7 +54,9 @@ ggplot(data, aes(x = group, y = value)) +
   geom_col() + 
   labs(x = "Categorical variable",
        y = "Numeric variable") +
-  theme(axis.title = element_text(size = 17)) 
+  theme(
+    axis.title = element_text(size = 17),
+    axis.text = element_text(size = 14)) 
 ```
 
 ---
