--- a/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
+++ b/course-materials/lecture-slides/SLIDES-amounts-rankings.qmd
@@ -92,7 +92,7 @@ We'll also learn about a couple alternatives, which may be better suited for you
 
 <hr>
 
-[In January 2025, The [U.S. Geological Survey](https://www.usgs.gov/){target="_blank"} (USGS) released its new [National Water Availability Assessment](https://www.usgs.gov/special-topics/integrated-water-availability-assessments/science/integrated-water-availability-0){target="_blank"} (NWAA), which offers insights into water supply, demand, and quality across the U.S. The modeled water availability data that underlies the NWAA is made available through the online [National Water Availability Assessment Data Companion](https://www.usgs.gov/special-topics/integrated-water-availability-assessments/national-water-availability-assessment-0){target="_blank"} (NWDC). Here, users can interactively [subset and download data](https://water.usgs.gov/nwaa-data/subset-download){target="_blank"} or download files containing the [full spatial and temporal extent](https://water.usgs.gov/nwaa-data/data-file-directory?path=data/){target="_blank"} of the NWDC datasets.]{.body-text-s}
+[In January 2025, The [U.S. Geological Survey](https://www.usgs.gov/){target="_blank"} (USGS) released its new [National Water Availability Assessment](https://www.usgs.gov/special-topics/integrated-water-availability-assessments/science/integrated-water-availability-0){target="_blank"} (NWAA), which offers insights into water supply, demand, and quality across the U.S. The modeled water availability data that underlies the NWAA is made available through the online [National Water Availability Assessment Data Companion](https://www.usgs.gov/special-topics/integrated-water-availability-assessments/national-water-availability-assessment-0){target="_blank"} (NWDC). Here, users can interactively [subset and download data](https://water.usgs.gov/nwaa-data/subset-download){target="_blank"} or download files containing the [full spatial (conterminous US) and temporal (2010-2020) extent](https://water.usgs.gov/nwaa-data/data-file-directory?path=data/){target="_blank"} of the NWDC datasets.]{.body-text-s}
 
 ```{r nwaa-map}
 #| eval: true
@@ -103,7 +103,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ```
 
 ::: {.center-text .body-text-s .gray-text}
-Surface water-supply and use index (SUI) by 12-digit hydrologic unit codes (HUCs) for water years 2010 - 2020. Source: [Chapter F](https://pubs.usgs.gov/pp/1894/f/pp1894F.pdf){target="_blank"} of the U.S. Geological Survey Integrated Water Availability Assessment—2010–20.
+Surface water-supply and use index (SUI) by 12-digit hydrologic unit codes (HUCs) for water years 2010-2020. Source: [Chapter F](https://pubs.usgs.gov/pp/1894/f/pp1894F.pdf){target="_blank"} of the U.S. Geological Survey Integrated Water Availability Assessment—2010–20.
 :::
 
 ::: {.notes}
@@ -118,7 +118,7 @@ The NWDC provides regularly updated, model-based estimates of water availability
 
 <hr>
 
-For today's lecture, we'll download the [full, integrated dataset](https://water.usgs.gov/nwaa-data/data-file-directory?path=data/integrated-water-availability/iwa-assessment-outputs-conus-2025/){target="_blank"} and filter for just the [California water resource region](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=Article,California%2C%20Nevada%2C%20and%20Oregon.){target="_bank"}, which is represented by the 2-digit hydrologic unit code (HUC), 18. We'll compare water availability and use across HUC 18's [ten subregions](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=%5B3%5D-,List%20of%20California%20water%20resource%20subregions,-%5Bedit%5D){target="_blank"}.
+For today's lecture, we'll download the [full, integrated dataset](https://water.usgs.gov/nwaa-data/data-file-directory?path=data/integrated-water-availability/iwa-assessment-outputs-conus-2025/){target="_blank"} and filter for just the [California water resource region](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=Article,California%2C%20Nevada%2C%20and%20Oregon.){target="_bank"}, which is represented by the 2-digit hydrologic unit code (HUC), 18. We'll start by comparing water availability and use across HUC 18's [ten subregions](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=%5B3%5D-,List%20of%20California%20water%20resource%20subregions,-%5Bedit%5D){target="_blank"}.
 
 <br>
 
@@ -128,7 +128,7 @@ For today's lecture, we'll download the [full, integrated dataset](https://water
 ```{r hucs-explained}
 #| eval: true
 #| echo: false
-#| out-width: "80%"
+#| out-width: "70%"
 #| fig-align: "center"
 knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "hucs-explained.png"))
 ```
@@ -139,7 +139,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 ```{r huc18-subregions}
 #| eval: true
 #| echo: false
-#| out-width: "100%"
+#| out-width: "90%"
 #| fig-align: "center"
 knitr::include_graphics(here::here("course-materials", "images", "lecture-slides", "HUC18-subregions.png"))
 ```
@@ -151,7 +151,7 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 <br>
 
 ::: {.footer}
-**(Left)** Source: [Hydrologic Unit Codes (HUCs) Explained](https://nas.er.usgs.gov/hucs.aspx){target="_blank"} | **(Right)** California region (HUC 18), with its ten 4-digit subregion hydrologic unit boundaries. Source: [Wikipedia](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=%5B3%5D-,List%20of%20California%20water%20resource%20subregions,-%5Bedit%5D){target="_blank"}
+**(Left)** Source: [Hydrologic Unit Codes (HUCs) Explained](https://nas.er.usgs.gov/hucs.aspx){target="_blank"}; Hydrologic units are identified using 12-digit hydrologic unit codes (HUC12s), which can be parsed into shorter codes representing larger spatial units (e.g. regions, subregions, subbasins). | **(Right)** California region (HUC 18), with its ten 4-digit subregion hydrologic unit boundaries. Source: [Wikipedia](https://en.wikipedia.org/wiki/California_water_resource_region#:~:text=%5B3%5D-,List%20of%20California%20water%20resource%20subregions,-%5Bedit%5D){target="_blank"}
 :::
 
 ---
@@ -161,6 +161,8 @@ knitr::include_graphics(here::here("course-materials", "images", "lecture-slides
 [Data wrangling]{.slide-title}
 
 <hr>
+
+[This integrated dataset includes modeled monthly estimates of available water supply, water consumption, and the Surface Water-Supply and Use Index (SUI) for hydrologic units across the conterminous US from 2010-2020.]{.body-text-s}
 
 <!-- RUNS BUT DOES NOT PRINT -->
 
@@ -178,76 +180,114 @@ library(janitor)
 library(scales)
 
 #..........................import data...........................
-water_use <- read_csv(here::here("course-materials", "data", "lecture", "combined_iwa-assessment-outputs-conus-2025_CONUS_200910-202009_long.csv"))
+iwa_data <- read_csv(here::here("course-materials", "data", "lecture", "combined_iwa-assessment-outputs-conus-2025_CONUS_200910-202009_long.csv"))
 
-#..................create df of subregion names..................
+#............create df of subregion & subbasin names.............
 # data only contain HUC codes; must manually join names if we want to include those in our viz
-# subregions identified in https://water.usgs.gov/GIS/wbd_huc8.pdf
-subregions <- tribble(
+# subregions (& others) identified in: https://water.usgs.gov/GIS/wbd_huc8.pdf
+# there may be a downloadable dataset containing HUCs & names out there...but I couldn't find it
+subregion_names <- tribble(
   ~subregion_HUC, ~subregion_name,
-  1801L, "Klamath-Northern California Coastal",
-  1802L, "Sacramento",
-  1803L, "Tulare-Buena Vista Lakes",
-  1804L, "San Joaquin",
-  1805L, "San Francisco Bay",
-  1806L, "Central California Coastal",
-  1807L, "Southern California Coastal",
-  1808L, "North Lahontan", 
-  1809L, "Northern Mojave-Mono Lake",
-  1810L, "Southern Mojave-Salton Sea"
-) |> 
-  mutate(subregion_HUC = as.factor(subregion_HUC))
+  "1801", "Klamath-Northern California Coastal",
+  "1802", "Sacramento",
+  "1803", "Tulare-Buena Vista Lakes",
+  "1804", "San Joaquin",
+  "1805", "San Francisco Bay",
+  "1806", "Central California Coastal",
+  "1807", "Southern California Coastal",
+  "1808", "North Lahontan", 
+  "1809", "Northern Mojave-Mono Lake",
+  "1810", "Southern Mojave-Salton Sea",
+)
+# HUC_names <- tribble(
+#   ~HUC, ~type, ~name,
+
+#   # all ten CA subregions ----
+#   "1801", "subregion", "Klamath-Northern California Coastal",
+#   "1802", "subregion", "Sacramento",
+#   "1803", "subregion", "Tulare-Buena Vista Lakes",
+#   "1804", "subregion", "San Joaquin",
+#   "1805", "subregion", "San Francisco Bay",
+#   "1806", "subregion", "Central California Coastal",
+#   "1807", "subregion", "Southern California Coastal",
+#   "1808", "subregion", "North Lahontan", 
+#   "1809", "subregion", "Northern Mojave-Mono Lake",
+#   "1810", "subregion", "Southern Mojave-Salton Sea",
+
+#   # all twelve Central California Coastal subbasins ----
+#   "18060002", "subbasin", "Pajaro",
+#   "18060003", "subbasin", "Carrizo Plain",
+#   "18060004", "subbasin", "Estrella",
+#   "18060005", "subbasin", "Salinas",
+#   "18060006", "subbasin", "Central Coastal",
+#   "18060007", "subbasin", "Cuyama",
+#   "18060008", "subbasin", "Santa Maria",
+#   "18060009", "subbasin", "San Antonio", 
+#   "18060010", "subbasin", "Santa Ynez",
+#   "18060013", "subbasin", "Santa Barbara Coastal",
+#   "18060014", "subbasin", "Santa Barbara Channel Islands",
+#   "18060015", "subbasin", "Monterey Bay"
+# )
+
+ca_region <- iwa_data |> 
+  clean_names() |> 
+  mutate(region_HUC = str_sub(string = huc12_id, start = 1, end = 2),
+         subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)) |> 
+  filter(region_HUC == "18") |> 
+  separate_wider_delim(cols = year_month,
+                       delim = "-",
+                       names = c("year", "month")) |>                          
+  mutate(year = as.numeric(year),
+         month = as.numeric(month)) |> 
+  left_join(subregion_names) |> 
+  select(year, month, huc12_id, region_HUC, subregion_HUC, subregion_name, availab_mm_mo, consum_mm_mo, sui_frac)
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-ca_region <- water_use |> 
+#......create df with just CA water resource region (HUC 18).....
+ca_region <- iwa_data |> 
 
-  # make nicer column names ---
+  # make nicer column names ----
   clean_names() |> 
 
-  # create columns for 2-unit (region-level) and 4-unit (subregion-level) HUCs using full 12-unit HUC ----
-  mutate(
-    region_HUC = str_sub(string = huc12_id, start = 1, end = 2),
-    subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)
-  ) |> 
-
+  # create columns for 2-unit (region-level) & 4-unit (subregion-level) HUC using full 12-unit HUC ----
+  mutate(region_HUC = str_sub(string = huc12_id, start = 1, end = 2),
+         subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)) |> 
+  
   # filter for just CA region (HUC 18) ----
   filter(region_HUC == "18") |> 
- 
+
   # separate year and month into two columns ----
   separate_wider_delim(cols = year_month,
                        delim = "-",
                        names = c("year", "month")) |> 
 
-  # convert year and month from chr to num ---                     
+  # convert year and month from chr to num ---                            
   mutate(year = as.numeric(year),
          month = as.numeric(month)) |> 
+  
+  # join subregion names ----
+  left_join(subregion_names) |> 
+  
+  # keep necessary columns & reorder in more logical way -----
+  select(year, month, huc12_id, region_HUC, subregion_HUC, subregion_name, availab_mm_mo, consum_mm_mo, sui_frac)
 
-  # coerce subregion_HUC from chr to factor ----
-  mutate(subregion_HUC = as.factor(subregion_HUC)) |> 
+# ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# ##                            explore missing data                          ----
+# ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-  # join subregion names from our subregions df (common key = subregion_huc) ----
-  left_join(subregions) |> 
+# sub1805 <- ca_region |> 
+#   filter(subregion_HUC == "1805") 
 
-  # reorder columns (not necesssary, but personally easier for me to navigate) ----
-  relocate(year, month, huc12_id, region_HUC, subregion_HUC, subregion_name, availab_mm_mo, consum_mm_mo, strflow_mm_mo, sui_frac)
+# see_NAs <- ca_region |> 
+#   group_by(year) |> 
+#   naniar::miss_var_summary() |>
+#   filter(variable == "availab_mm_mo")
 
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                            explore missing data                          ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-sub1805 <- ca_region |> 
-  filter(subregion_HUC == "1805") 
-
-see_NAs <- ca_region |> 
-  group_by(year) |> 
-  naniar::miss_var_summary() |>
-  filter(variable == "availab_mm_mo")
-
-avail <- sub1805 |> select(availab_mm_mo)
-missing_avail <- naniar::vis_miss(avail)
+# avail <- sub1805 |> select(availab_mm_mo)
+# missing_avail <- naniar::vis_miss(avail)
 ```
 
 <!-- PRINTS BUT DOES NOT RUN -->
@@ -266,76 +306,55 @@ library(janitor)
 library(scales)
 
 #..........................import data...........................
-water_use <- read_csv(here::here("week3", "data", "combined_iwa-assessment-outputs-conus-2025_CONUS_200910-202009_long.csv"))
+iwa_data <- read_csv(here::here("week3", "data", "combined_iwa-assessment-outputs-conus-2025_CONUS_200910-202009_long.csv"))
 
-#..................create df of subregion names..................
+#............create df of subregion & subbasin names.............
 # data only contain HUC codes; must manually join names if we want to include those in our viz
-# subregions identified in https://water.usgs.gov/GIS/wbd_huc8.pdf
-subregions <- tribble(
+# subregions (& others) identified in: https://water.usgs.gov/GIS/wbd_huc8.pdf
+# there may be a downloadable dataset containing HUCs & names out there...but I couldn't find it
+subregion_names <- tribble(
   ~subregion_HUC, ~subregion_name,
-  1801L, "Klamath-Northern California Coastal",
-  1802L, "Sacramento",
-  1803L, "Tulare-Buena Vista Lakes",
-  1804L, "San Joaquin",
-  1805L, "San Francisco Bay",
-  1806L, "Central California Coastal",
-  1807L, "Southern California Coastal",
-  1808L, "North Lahontan", 
-  1809L, "Northern Mojave-Mono Lake",
-  1810L, "Southern Mojave-Salton Sea"
-) |> 
-  mutate(subregion_HUC = as.factor(subregion_HUC))
+  "1801", "Klamath-Northern California Coastal",
+  "1802", "Sacramento",
+  "1803", "Tulare-Buena Vista Lakes",
+  "1804", "San Joaquin",
+  "1805", "San Francisco Bay",
+  "1806", "Central California Coastal",
+  "1807", "Southern California Coastal",
+  "1808", "North Lahontan", 
+  "1809", "Northern Mojave-Mono Lake",
+  "1810", "Southern Mojave-Salton Sea",
+)
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-ca_region <- water_use |> 
-
-  # make nicer column names ---
+#......create df with just CA water resource region (HUC 18).....
+ca_region <- iwa_data |> 
   clean_names() |> 
-
-  # create columns for 2-unit (region-level) and 4-unit (subregion-level) HUCs using full 12-unit HUC ----
-  mutate(
-    region_HUC = str_sub(string = huc12_id, start = 1, end = 2),
-    subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)
-  ) |> 
-
-  # filter for just CA region (HUC 18) ----
+  mutate(region_HUC = str_sub(string = huc12_id, start = 1, end = 2),
+         subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)) |> 
   filter(region_HUC == "18") |> 
- 
-  # separate year and month into two columns ----
   separate_wider_delim(cols = year_month,
                        delim = "-",
-                       names = c("year", "month")) |> 
-
-  # convert year and month from chr to num ---                     
+                       names = c("year", "month")) |>                          
   mutate(year = as.numeric(year),
          month = as.numeric(month)) |> 
+  left_join(subregion_names) |> 
+  select(year, month, huc12_id, region_HUC, subregion_HUC, subregion_name, availab_mm_mo, consum_mm_mo, sui_frac)
 
-  # coerce subregion_HUC from chr to factor ----
-  mutate(subregion_HUC = as.factor(subregion_HUC)) |> 
+# #...................create df of CA subregions...................
+# ca_subregions <- ca_region |> 
+#   mutate(subregion_HUC = str_sub(string = huc12_id, start = 1, end = 4)) |> 
+#   left_join(subregion_names, by = c("subregion_HUC" = "HUC"))
 
-  # join subregion names from our subregions df (common key = subregion_huc) ----
-  left_join(subregions) |> 
-
-  # reorder columns (not necesssary, but personally easier for me to navigate) ----
-  relocate(year, month, huc12_id, region_HUC, subregion_HUC, subregion_name, availab_mm_mo, consum_mm_mo, strflow_mm_mo, sui_frac)
-
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##                            explore missing data                          ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-sub1805 <- ca_region |> 
-  filter(subregion_HUC == "1805") 
-
-see_NAs <- ca_region |> 
-  group_by(year) |> 
-  naniar::miss_var_summary() |>
-  filter(variable == "availab_mm_mo")
-
-avail <- sub1805 |> select(availab_mm_mo)
-missing_avail <- naniar::vis_miss(avail)
+#................create df of HUC 1806 subbasins.................
+# ccc_subbasins <- ca_subregions |> 
+#   select(-c(name, type)) |> 
+#   filter(subregion_HUC == "1806") |> 
+#   mutate(subbasin_HUC = str_sub(string = huc12_id, start = 1, end = 8)) |> 
+#   left_join(HUC_names |> filter(type == "subbasin"), by = c("subbasin_HUC" = "HUC"))
 ```
 
 ---
@@ -355,7 +374,8 @@ missing_avail <- naniar::vis_miss(avail)
 
 <hr>
 
-[Let's first **explore the mean surface water-supply and use index (SUI) across the ten HUC 18 subregions**. Higher SUIs indicate a greater water stress. The heights of each bar and lollipop represents the average SUI for each subregion from 2010-2020.]{.body-text-s}
+
+[Let's first look at the **long-term mean Surface Water-Supply and Use Index (SUI) across the ten HUC 18 subregions**. Higher SUI values indicate greater water stress. Each bar and lollipop represents the mean SUI for a given subregion, calculated by averaging all monthly SUI values from 2010–2020.]{.body-text-s}
 
 :::: {.columns}
 
@@ -366,8 +386,8 @@ missing_avail <- naniar::vis_miss(avail)
 #| fig-align: "center"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  ggplot(aes(x = subregion_name, y = avg_sui)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  ggplot(aes(x = subregion_name, y = mean_sui_2010_2020)) +
   geom_col() 
 ```
 :::
@@ -379,10 +399,10 @@ ca_region |>
 #| fig-align: "center"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  ggplot(aes(x = subregion_name, y = avg_sui)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  ggplot(aes(x = subregion_name, y = mean_sui_2010_2020)) +
   geom_point() +
-  geom_linerange(aes(ymin = 0, ymax = avg_sui))
+  geom_linerange(aes(ymin = 0, ymax = mean_sui_2010_2020))
 ```
 
 :::
@@ -405,7 +425,7 @@ You might also consider using `ggalt::geom_lollipop()` for a simple lollipop cha
 
 <hr>
 
-We never want to leave overlapping or super squished text (espeically axis text) on our plots. Let's give those long x-axis labels some breathing room using by reversing your axes mappings! Alternatively, you can leave your mappings as-is and apply `coord_flip()`.
+[We never want to leave overlapping or super squished text (espeically axis text) on our plots. Let's give those long x-axis labels some breathing room using by reversing your axes mappings! Alternatively, you can leave your mappings as-is and apply `coord_flip()`.]{.body-text-s}
 
 :::: {.columns}
 
@@ -417,10 +437,11 @@ We never want to leave overlapping or super squished text (espeically axis text)
 #| code-line-numbers: "4"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_col() 
 ```
+
 :::
 
 ::: {.column width="50%"}
@@ -431,10 +452,10 @@ ca_region |>
 #| code-line-numbers: "4,6"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_point() +
-  geom_linerange(aes(xmin = 0, xmax = avg_sui))
+  geom_linerange(aes(xmin = 0, xmax = mean_sui_2010_2020))
 ```
 
 :::
@@ -453,7 +474,7 @@ We also want to avoid the temptation to [rotate our axis text](https://clauswilk
 
 <hr>
 
-Here, we use `forcats::fct_reorder()` to reorder the levels of our y-axis variable, `subregion_name`, based on a numeric variable, `avg_sui`.
+[Here, we use `forcats::fct_reorder()` to reorder the levels of our y-axis variable, `name`, based on a numeric variable, `mean_sui_2010_2020`.]{.body-text-s}
 
 :::: {.columns}
 
@@ -465,9 +486,9 @@ Here, we use `forcats::fct_reorder()` to reorder the levels of our y-axis variab
 #| fig-align: "center"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = avg_sui)) |>
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_sui_2010_2020)) |>
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_col() 
 ```
 :::
@@ -480,11 +501,11 @@ ca_region |>
 #| fig-align: "center"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = avg_sui)) |>
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_sui_2010_2020)) |>
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_point() +
-  geom_linerange(aes(xmin = 0, xmax = avg_sui))
+  geom_linerange(aes(xmin = 0, xmax = mean_sui_2010_2020))
 ```
 :::
 
@@ -512,7 +533,7 @@ THIS NEEDS TO MOVE SOMEWHERE ELSE
 
 <hr>
 
-[`geom_text()` allows us to map values from a column (here, `avg_sui`) directly onto the plot as text labels. This can be helpful if it's important for readers to know precise values (rather than estimating the length of a bar against its axis). Avoid adding if relative comparisons are enough or if values are already easy to estimate using the axis.]{.body-text-s}
+[`geom_text()` allows us to map values from a column (here, `mean_sui_2010_2020`) directly onto the plot as text labels. This can be helpful if it's important for readers to know precise values. Avoid adding if relative comparisons are enough or if it's easy to estimate the length of a bar against its axis.]{.body-text-s}
 
 :::: {.columns}
 
@@ -524,11 +545,11 @@ THIS NEEDS TO MOVE SOMEWHERE ELSE
 #| fig-align: "center"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = avg_sui)) |>
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_sui_2010_2020)) |>
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_col() +
-  geom_text(aes(label = round(avg_sui, 2)), hjust = 1.2, color = "white") 
+  geom_text(aes(label = round(mean_sui_2010_2020, 2)), hjust = 1.2, color = "white") 
 ```
 :::
 
@@ -541,12 +562,12 @@ ca_region |>
 #| out-width: "80%"
 ca_region |> 
   group_by(subregion_name) |> 
-  summarise(avg_sui = mean(sui_frac, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = avg_sui)) |>
-  ggplot(aes(x = avg_sui, y = subregion_name)) +
+  summarise(mean_sui_2010_2020 = mean(sui_frac, na.rm = TRUE)) |> 
+  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_sui_2010_2020)) |>
+  ggplot(aes(x = mean_sui_2010_2020, y = subregion_name)) +
   geom_point() +
-  geom_linerange(aes(xmin = 0, xmax = avg_sui)) +
-  geom_text(aes(label = round(avg_sui, 2)), hjust = -0.3) + 
+  geom_linerange(aes(xmin = 0, xmax = mean_sui_2010_2020)) +
+  geom_text(aes(label = round(mean_sui_2010_2020, 2)), hjust = -0.3) + 
   scale_x_continuous(limits = c(0, 0.6))
 ```
 :::
@@ -735,41 +756,38 @@ Bar plots are very commonly used in both ways (comparing counts and visualizing 
 
 <hr>
 
-Let's say we want to **explore the change in average SUI through time for each of the ten HUC 18 subregions**. We can use a heatmap to create a matrix that displays average SUI (numeric, continuous) by subregion (categorical) and year (categorical):
+[Now let's look at **how water stress changes through time for each of the ten HUC 18 subregions**. We can use a heatmap to create a matrix that displays annual mean SUI values (numeric, continuous), calculated by averaging monthly observations within each year, by subregion (categorical) and year (categorical):]{.body-text-s}
 
 ```{r heatmap-example}
 #| eval: true
 #| echo: false
 #| out-width: "100%"
 #| fig-align: "center"
-#..........df of average annual SUI by subresion & year..........
-avg_annual_sui <- ca_region |> 
-  select(year, month, subregion_HUC, subregion_name, sui_frac) |> 
+#...........df of annual mean SUI by subregion & year ...........
+heatmap_data <- ca_region |> 
   group_by(subregion_name, year) |> 
-  summarise(
-    avg_ann_sui = mean(sui_frac, na.rm = TRUE)
-  ) |> 
+  summarize(annual_mean_sui = mean(sui_frac, na.rm = TRUE)) |> 
   ungroup()
 
- #.determine order of subregions based on highest avg SUI in 2015.
-order_2015 <- avg_annual_sui |> 
+#.determine order of subregions based on highest avg SUI in 2015.
+order_2015 <- heatmap_data |> 
   filter(year == 2015) |> 
-  arrange(avg_ann_sui) |> 
+  arrange(annual_mean_sui) |> 
   mutate(order = row_number()) |> 
-  select(avg_ann_sui, order) 
+  select(annual_mean_sui, order) 
 
 #........join order with rest of data to set factor levels.......
-heatmap_order <- avg_annual_sui |> 
-  left_join(order_2015, by = "avg_ann_sui") |> 
-  mutate(subregion_name = fct_reorder(subregion_name, order))
+heatmap_order <- heatmap_data |> 
+  left_join(order_2015) |> 
+  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = order))
 
 #.........................create heatmap.........................
-ggplot(heatmap_order, aes(x = year, y = subregion_name, fill = avg_ann_sui)) +
+ggplot(heatmap_order, aes(x = year, y = subregion_name, fill = annual_mean_sui)) +
   geom_tile() +
-  labs(fill = "Average Surface Water-Supply and\nUse Index (SUI)") + # caption = "A higher index value indicates greater water stress."
+  labs(fill = "Annual Mean Surface Water-Supply and Use Index (SUI)") + # caption = "A higher index value indicates greater water stress."
   scale_fill_viridis_c() +
   scale_x_continuous(breaks = seq(2010, 2020, by = 2)) +
-  guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75, title.position = "top")) +
+  guides(fill = guide_colorbar(barwidth = 20, barheight = 0.75, title.position = "top")) +
   theme_minimal() +
   theme(
     legend.position = "top",
@@ -800,35 +818,31 @@ We can make heatmaps using `geom_tile()`.
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-#..........df of average annual SUI by subresion & year..........
-avg_annual_sui <- ca_region |> 
-  select(year, month, subregion_HUC, subregion_name, sui_frac) |> 
+#...........df of annual mean SUI by subregion & year ...........
+heatmap_data <- ca_region |> 
   group_by(subregion_name, year) |> 
-  summarise(
-    avg_ann_sui = mean(sui_frac, na.rm = TRUE)
-  ) |> 
+  summarize(annual_mean_sui = mean(sui_frac, na.rm = TRUE)) |> 
   ungroup()
 
- #.determine order of subregions based on highest avg SUI in 2015.
-order_2015 <- avg_annual_sui |> 
+#.determine order of subregions based on highest avg SUI in 2015.
+order_2015 <- heatmap_data |> 
   filter(year == 2015) |> 
-  arrange(avg_ann_sui) |> 
+  arrange(annual_mean_sui) |> 
   mutate(order = row_number()) |> 
-  select(avg_ann_sui, order) 
+  select(annual_mean_sui, order) 
 
 #........join order with rest of data to set factor levels.......
-heatmap_order <- avg_annual_sui |> 
-  left_join(order_2015, by = "avg_ann_sui") |> 
-  mutate(subregion_name = fct_reorder(subregion_name, order))
+heatmap_order <- heatmap_data |> 
+  left_join(order_2015) |> 
+  mutate(name = fct_reorder(.f = subregion_name, .x = order))
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                               create heatmap                             ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-#.........................create heatmap.........................
-ggplot(heatmap_order, aes(x = year, y = subregion_name, fill = avg_ann_sui)) +
+ggplot(heatmap_order, aes(x = year, y = subregion_name, fill = annual_mean_sui)) +
   geom_tile() +
-  labs(fill = "Average Surface Water-Supply and\nUse Index (SUI)") + # caption = "A higher index value indicates greater water stress."
+  labs(fill = "Annual Mean Surface Water-Supply and\nUse Index (SUI)") + # caption = "A higher index value indicates greater water stress."
   scale_fill_viridis_c() +
   scale_x_continuous(breaks = seq(2010, 2020, by = 2)) +
   guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75, title.position = "top")) +
@@ -845,15 +859,9 @@ ggplot(heatmap_order, aes(x = year, y = subregion_name, fill = avg_ann_sui)) +
 ##  {#dumbbell-plots data-menu-title="## Dumbbell plots ##" background="#047C90"}
 
 <div class="vertical-center">
-<center><div class = "custom-subtitle">Dumbbell plots</div></center>
+<<center><div class = "custom-subtitle">Dumbbell plots</div></center>
 <center><div class="custom-subtitle3">*highlights magnitude and direction of change (or difference) between two values within a category | shows exact values, but focus is on the difference between values | encode values using POSITION*</div></center>
 </div>
-
----
-
-come back to this, these data seem really off but maybe it's becuase I'm not understanding availb_mm_mo and consum_mm_mo...
-
-consider doing so for Central California subbasins?
 
 ---
 
@@ -863,7 +871,7 @@ consider doing so for Central California subbasins?
 
 <hr>
 
-Let's say we want to **compare overall average water availability and consumption by subregion from 2010–2020.** We can use a dumbbell (aka Cleveland) plot to display the average amount of water (numeric) available and consumed (categroical), by subregion (categorical):
+[Let’s say we want to **compare mean monthly water availability and consumption in the Santa Barbara Coastal subbasin across the years 2010-2020**. We can use a dumbbell (aka Cleveland) plot to display the average amount of water (mm; numeric) available vs. consumed (categorical), by month (categorical).]{.body-text-s}
 
 ```{r dumbbell-example}
 #| eval: true
@@ -875,26 +883,31 @@ Let's say we want to **compare overall average water availability and consumptio
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-avail_vs_consum <- ca_region |> 
-  group_by(subregion_name) |>
+sbc_subbasin_monthly <- ca_region |> 
+  mutate(subbasin_HUC = str_sub(string = huc12_id, start = 1, end = 8)) |> 
+  filter(subbasin_HUC == "18060013") |> # Santa Barbara Coastal subbasin (HUC8: 18060013)
+  group_by(month) |> 
   summarize(mean_avail = mean(availab_mm_mo, na.rm = TRUE),
             mean_consum = mean(consum_mm_mo, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_avail))
+  mutate(month = month.abb[month],
+         month = factor(month, levels = rev(month.abb)))
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                            create dumbbell chart                         ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-ggplot(avail_vs_consum) +
-  geom_linerange(aes(y = subregion_name,
+ggplot(sbc_subbasin_monthly) +
+  geom_linerange(aes(y = month,
                      xmin = mean_consum, xmax = mean_avail)) + 
-  geom_point(aes(x = mean_avail, y = subregion_name), 
+  geom_point(aes(x = mean_avail, y = month), 
              color = "#448F9C", 
              size = 4) +
-  geom_point(aes(x = mean_consum, y = subregion_name), 
+  geom_point(aes(x = mean_consum, y = month), 
              color = "#9C7344", 
              shape = 17,
-             size = 4)
+             size = 4) +
+  labs(x = "Water quantity (mm)") +
+  theme(axis.title.y = element_blank())
 ```
 
 ::: {.footer}
@@ -921,27 +934,36 @@ Example viz: <https://www.usgs.gov/media/images/water-supply-vs-demand-2010-2020
 ##                                wrangle data                              ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-avail_vs_consum <- ca_region |> 
-  group_by(subregion_name) |>
+sbc_subbasin_monthly <- ca_region |> 
+  mutate(subbasin_HUC = str_sub(string = huc12_id, start = 1, end = 8)) |> 
+  filter(subbasin_HUC == "18060013") |> # Santa Barbara Coastal subbasin (HUC8: 18060013)
+  group_by(month) |> 
   summarize(mean_avail = mean(availab_mm_mo, na.rm = TRUE),
             mean_consum = mean(consum_mm_mo, na.rm = TRUE)) |> 
-  mutate(subregion_name = fct_reorder(.f = subregion_name, .x = mean_avail))
+  mutate(month = month.abb[month],
+         month = factor(month, levels = rev(month.abb)))
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##                            create dumbbell chart                         ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-ggplot(avail_vs_consum) +
-  geom_linerange(aes(y = subregion_name,
+ggplot(sbc_subbasin_monthly) +
+  geom_linerange(aes(y = month,
                      xmin = mean_consum, xmax = mean_avail)) + 
-  geom_point(aes(x = mean_avail, y = subregion_name), 
+  geom_point(aes(x = mean_avail, y = month), 
              color = "#448F9C", 
              size = 4) +
-  geom_point(aes(x = mean_consum, y = subregion_name), 
+  geom_point(aes(x = mean_consum, y = month), 
              color = "#9C7344", 
              shape = 17,
-             size = 4)
+             size = 4) +
+  labs(x = "Water quantity (mm)") +
+  theme(axis.title.y = element_blank())
 ```
+
+::: {.footer}
+**Note:** Here, it makes sense to order the y-axis groups chronologically (Jan > Dec). If your grouping variable is not inherently chronological (e.g. if comparing water availability and consumption across different subbasins), a common approach is to order groups by a mean or max value. See this [archived version](ARCHIVE/SLIDES-amounts-rankings_jobs.qmd#dumbbell-plot-example){target="_blank"} of the lecture for an alternative dumbbell plot example where we order differently.
+:::
 
 ##  {#end-break data-menu-title="# Break #" background="#047C90"}
 
